2.1.1/_sources/gallery/userdemo/anchored_box03.rst.txt


.. _sphx_glr_gallery_userdemo_anchored_box03.py:


==============
Anchored Box03
==============





.. image:: /gallery/userdemo/images/sphx_glr_anchored_box03_001.png
    :align: center





.. code-block:: python

    from matplotlib.patches import Ellipse
    import matplotlib.pyplot as plt
    from mpl_toolkits.axes_grid1.anchored_artists import AnchoredAuxTransformBox


    fig, ax = plt.subplots(figsize=(3, 3))

    box = AnchoredAuxTransformBox(ax.transData, loc=2)
    el = Ellipse((0, 0), width=0.1, height=0.4, angle=30)  # in data coordinates!
    box.drawing_area.add_artist(el)

    ax.add_artist(box)

    plt.show()

**Total running time of the script:** ( 0 minutes  0.016 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: anchored_box03.py <anchored_box03.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: anchored_box03.ipynb <anchored_box03.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
